2.3.0 (04/11/2014)

1.  Added the fwrapv compiler flag.
2.  Reset buffers that may contain password information in display_files.c.

2.2.9 (04/04/2014)

1.  All CGI programs must verify that the provided user name is known.
2.  Corrected the isValidId() function. The function accepted
    names that partially matched existing names.
3.  Increased BUFF_SIZE to 1024.
4.  Passwords are now hashed via crypt(). Please note the use
    of /dev/urandom. Please remove the passwd.user files.
5.  Replaced all access() instances with stat().
6.  Spelling corrections.
7.  The displayFiles() function did not properly close
    the file opened by creat(). Corrected.
8.  The variable stdin may be invalid.
9.  Use strnlen() where possible.

2.2.8 (03/20/2014)

1.  Added umask(~0770) before mkdir() in upload_script.pl.
2.  Corrected permissions in install.pl. User directories should
    only be accessible by the designated Apache account and group.
3.  Guard against empty pointers.
4.  If necessary, provide a successful exit code in install.pl.
5.  Inspect argv[].
6.  Inspect mkdir() and open() results in upload_script.pl.
7.  Provide an exit code in upload_script.pl.
8.  Resized indata from 128 to BUFF_SIZE in display_files.c.
9.  Terminate body and html tags in upload_script.pl whenever harsh
    failures occur.
10  Test $userid in upload_script.pl.
11. Updated the CGI-Upload bundle to version 1.11.

2.2.7 (03/14/2014)

1.  Set fp variables to zero after issuing fclose().

2.2.6 (02/28/2014)

1.  Added the Wformat compiler flag.
2.  Clear buffers prior to issuing snprint().
3.  Corrected printf() formats.
4.  The shell scripts shall exit with success.

2.2.5 (02/06/2014)

1.  Guard against empty pointers.

2.2.4 (02/02/2014)

1.  Corrected arguments to fgets(). (fgets() reads at most size - 1 characters.)
2.  Redefined some integer variables to be of type size_t.

2.2.3 (02/01/2014)

1.  Protect array boundaries.