@@ -1,7 +1,9 @@
 2.3.0 (04/11/2014)
 
 1.  Added the fwrapv compiler flag.
-2.  Reset buffers that may contain password information in display_files.c.
+2.  Corrected the savePassword() function. The method should not close the
+    file parameter.
+3.  Reset buffers that may contain password information in display_files.c.
 
 2.2.9 (04/04/2014)
 
